# pokeclone

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  build.bat
data/shaders/: fragment.glsl  vertex.glsl
data/textures/: texture_ids.md  tile_sheet.xcf
data/textures/pokearth/: pallet_town.xcf  pewter_city.xcf
data/tilemap/: pallet_town.xcf  tilemap.xcf
src/: Input.c  Input.h  Maths.h  Renderer.c  Renderer.h  System.c  System.h  TextureAtlasInfo.h  application.c
